After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749380 - dtls[enc|dec]: Memory leak on keys
dtls[enc|dec]: Memory leak on keys
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-14 14:08 UTC by Jose Antonio Santos Cadenas
Modified: 2015-05-15 13:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dtls: Fix memory leak (2.39 KB, patch)
2015-05-14 14:08 UTC, Jose Antonio Santos Cadenas
committed Details | Review

Description Jose Antonio Santos Cadenas 2015-05-14 14:08:35 UTC
Created attachment 303367 [details] [review]
dtls: Fix memory leak

Attached is a patch for the leak
Comment 1 Sebastian Dröge (slomo) 2015-05-15 13:03:58 UTC
commit d625770a18f68b1a1eee2a71810cb2fe692ecee9
Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Date:   Thu May 14 16:06:55 2015 +0200

    dtls: Fix memory leak
    
    Keys were not correctly released when it was get as a property
    nor when a second key was received
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749380